home,donate,gallary,join

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h2>SEVA HETU SETU</h2>
             <h3>Discover</h3>
             <a href="#"><img src="images/home.png" alt="Home"> Home</a>
-            <a href="#"><img src="images/home.png" alt="Join Us"> Join us</a>
-            <a href="#"><img src="images/home.png" alt="Donate"> Donate</a>
-            <a href="#"><img src="images/radio.png" alt="Gallery"> Gallery</a>
+            <a href="joinus.html"><img src="images/home.png" alt="Join Us"> Join us</a>
+            <a href="donate.html"><img src="images/home.png" alt="Donate"> Donate</a>
+            <a href="gallery.html"><img src="images/radio.png" alt="Gallery"> Gallery</a>
             <a href="#"><img src="images/radio.png" alt="Contact Us"> Contact us</a>
         </div>
     </div>
