--- a/joinus.html
+++ b/joinus.html
@@ -73,7 +73,7 @@
                                <a href="#"><button class="b1">ASK YOUR QUERY</button></a> 
                                    
                             </div>
-                               <a href="#"><button class="b2"> <div>JOIN US NOW</div>  </button></a>
+                               <a href="https://forms.gle/3t7ZuWFRAsfKjtCD7"><button class="b2"> <div>JOIN US NOW</div>  </button></a>
                             
                         </div>
                             <div class="r2">
@@ -124,11 +124,11 @@
                     <div class="project-grid">
                         <div class="project-item">
                             <img src="images/shakti.png" alt="Project Shakti">
-                           <a href="#"><p>SHAKTI</p></a> 
+                           <a href="shakti.html"><p>SHAKTI</p></a> 
                         </div>
                         <div class="project-item">
                             <img src="images/virdha.png" alt="Project Virdha">
-                            <a href="#"><p>VRIDHA</p></a> 
+                            <a href="vridha.html"><p>VRIDHA</p></a> 
                         </div>
                         <div class="project-item">
                             <img src="images/seva.png" alt="Project Seva">
