--- a/gallery.html
+++ b/gallery.html
@@ -111,11 +111,11 @@
                     <div class="project-grid">
                         <div class="project-item">
                             <img src="images/shakti.png" alt="Project Shakti">
-                           <a href="#"><p>SHAKTI</p></a> 
+                           <a href="shakti.html"><p>SHAKTI</p></a> 
                         </div>
                         <div class="project-item">
                             <img src="images/virdha.png" alt="Project Virdha">
-                            <a href="#"><p>VRIDHA</p></a> 
+                            <a href="vridha.html"><p>VRIDHA</p></a> 
                         </div>
                         <div class="project-item">
                             <img src="images/seva.png" alt="Project Seva">
