--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
             </li>
             <li id="s"><a href="#">  </a></li>
             <li>  
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </li>
 
             <li id="s"><a href="#">  </a></li>
