--- a/joinus.html
+++ b/joinus.html
@@ -30,7 +30,7 @@
             
             <li id="s"><a href="#">  </a></li>
             <li>  
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </li>
 
             <li id="s"><a href="#">  </a></li>
